--- a/package.json
+++ b/package.json
@@ -13,28 +13,51 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/blur": "^4.2.0",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/netinfo": "9.3.0",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@twotalltotems/react-native-otp-input": "1.3.7",
+    "date-fns": "^2.29.1",
     "expo": "~46.0.7",
+    "expo-app-loading": "~2.1.0",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.3",
     "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-linking": "~3.2.2",
+    "expo-location": "~14.3.0",
+    "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-image-fallback": "^1.0.1",
+    "react-native-maps": "0.31.1",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-ui-lib": "^6.20.1",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/geojson": "^7946.0.10",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "jest": "^26.6.3",
