--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "graphql-ws": "^5.11.2",
     "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
