Pre production commit

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "locale: store",
+    "name": "locality: store",
     "slug": "locstore",
     "version": "1.0.0",
     "orientation": "portrait",
